--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
 	<title>Exercises | Teacher - Maria Olívia </title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
@@ -8,7 +9,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<div class="header">
+	<header>
+		<ul>
+			<li><img src="imagens/duvida.png"></li>
+			<a href=""><li>DEIXE SUA DÚVIDA</li></a>
+		</ul>
+	</header>
+
+<div class="header2">
 	
 		<h2>Exercises | Simple Present</h2>
 		<h3>DO, DOES, DID e WILL</h3>
